--- a/config/dev/golibConfig.toml
+++ b/config/dev/golibConfig.toml
@@ -1,7 +1,13 @@
 #golib config
 [system]
     env="dev"       # pro dev oa local
-    addr=8888
+[http]
+    post=8888
+    gin_modle="debug" # debug,release,test
+    read_timeout = 10   #second
+    write_timeout = 10  #second
+    max_header_bytes = 20 # 1<<20
+
 [log]
     [log.rotate]           #lumberjack 日志文件滚动配置
         on = true
@@ -46,3 +52,7 @@
         port = "6379"
         password = "123456"
         db = 0
+[gorm]
+    table_prefix=""         #表名前缀
+    singular_table=false     #是否使用单数表名
+    sql_log_lever = 2 #(1,2,3,4)(Silent,Error,Warn,Info) gorm 日志级别
